# CDWFS-BC04EC10_N-CDWFS26-016

./: .gitignore  README.md  bandit.yaml  openapi.yaml  pyproject.toml  questions.md  rapport.md  sonar-project.properties
api/: README.md  contract_test.py  requests.http
tests/: conftest.py  test_api.py  test_html.py
